@@ -11,24 +11,13 @@ import zio.UIO
 @Fork(
     value = 1,
     jvmArgs = Array(
-        // "-XX:+UnlockDiagnosticVMOptions",
-        // "-Dgraal.PrintCompilation=true",
-        // "-Dgraal.Log",
-        // "-Dgraal.MethodFilter=kyo.scheduler.IOFiber.*",
-        // "-XX:+TraceDeoptimization",
-        // "-XX:+LogCompilation",
-        // "-Dgraal.Dump=", //, "-Dgraal.MethodFilter=kyo2.*",
-        // "-XX:+PrintCompilation", "-XX:+PrintInlining",
-        // "-XX:+TraceTypeProfile",
         "-Dcats.effect.tracing.mode=DISABLED",
         "-XX:+UnlockExperimentalVMOptions",
         "-XX:-DoJVMTIVirtualThreadTransitions"
+    ),
+    jvmArgsPrepend = Array(
+        "--add-opens=java.base/java.lang=ALL-UNNAMED"
     )
-    // jvmArgsPrepend = Array(
-    //     "--enable-preview",
-    //     "--add-modules=jdk.incubator.concurrent"
-    // )
-    // jvm = "/Users/flavio.brasil/Downloads/graalvm-ce-java17-22.3.0/Contents/Home/bin/java"
 )
 @BenchmarkMode(Array(Mode.Throughput))
 sealed abstract class Bench[T]:
